- Update CMake files - Add support for nodes with multiple output - Add support for new node types - Add lightmap rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,42 +68,76 @@ link_external_library(vfilesystem)
 link_external_library(luxcorerender)
 add_include_dir(luxcorerender_generated)
 
+set(DEPENDENCY_LIBBOOST_FILESYSTEM_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_filesystem-vc142-mt-x64-1_72.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LIBBOOST_IOSTREAMS_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_iostreams-vc142-mt-x64-1_72.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LIBBOOST_SERIALIZATION_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_serialization-vc142-mt-x64-1_72.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LIBBOOST_ZLIB_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_zlib-vc142-mt-x64-1_72.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LIBBOOST_THREAD_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_thread-vc142-mt-x64-1_72.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LIBBOOST_REGEX_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_regex-vc142-mt-x64-1_72.lib" CACHE PATH "Path to library." FORCE)
+
+set(DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION "" CACHE PATH "Path to LuxCoreRender lib directory.")
+set(DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION "" CACHE PATH "Path to LuxCoreRender lib directory.")
+set(DEPENDENCY_LUXCORERENDER_OPENSUBDIV_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/opensubdiv.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENIMAGEDENOISE_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageDenoise.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_TIFF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/libtiff.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_LPNG_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/libpng.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_ZLIB_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/zlib1.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_JPEG_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/jpeg.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENEXR_HALF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Half.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENEXR_IEX_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Iex.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMTHREAD_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmThread.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENEXR_IMATH_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Imath.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMIMF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmImf.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_BCD_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/bcd.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_BLOSC_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/blosc.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_EMBREE3_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/embree3.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_OPENVDB_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/openvdb.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_LUXRAYS_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/luxrays.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_SLGCORE_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-core.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_SLGFILM_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-film.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_SLGKERNELS_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-kernels.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_TBB_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/tbb.lib" CACHE PATH "Path to library." FORCE)
+
 add_include_dir(openimageio)
-add_external_library(openimageio)
-link_external_library(openimagedenoise)
+add_external_library(luxcorerender_openimageio)
+link_external_library(luxcorerender_openimagedenoise)
 add_include_dir(glm)
+add_include_dir(boost)
 add_external_library(glew)
-add_external_library(tiff)
-add_external_library(lpng)
-add_external_library(zlib)
-add_external_library(jpeg)
+add_external_library(luxcorerender_tiff)
+add_external_library(luxcorerender_lpng)
+add_external_library(luxcorerender_zlib)
+add_external_library(luxcorerender_jpeg)
 
 # Required for color management
 link_external_library(util_ocio)
-add_external_library(OpenEXR_Half)
-add_external_library(OpenEXR_Iex)
-add_external_library(OpenEXR_IlmThread)
-add_external_library(OpenEXR_Imath)
-add_external_library(OpenEXR_IlmImf)
-add_external_library(OpenColorIO)
-add_external_library(OpenImageIO)
+add_external_library(luxcorerender_OpenEXR_Half)
+add_external_library(luxcorerender_OpenEXR_Iex)
+add_external_library(luxcorerender_OpenEXR_IlmThread)
+add_external_library(luxcorerender_OpenEXR_Imath)
+add_external_library(luxcorerender_OpenEXR_IlmImf)
+add_external_library(opencolorio)
+add_external_library(luxcorerender_OpenImageIO)
 #
 
-add_external_library(opensubdiv)
-add_external_library(bcd)
-add_external_library(blosc)
-add_external_library(embree3)
-add_external_library(openvdb)
-add_external_library(luxrays)
-add_external_library(slgcore)
-add_external_library(slgfilm)
-add_external_library(slgkernels)
-add_external_library(tbb)
-add_external_library(luxcore_openexr_Half)
-add_external_library(luxcore_openexr_Iex)
-add_external_library(luxcore_openexr_IlmThread)
-add_external_library(luxcore_openexr_Imath)
-add_external_library(luxcore_openexr_IlmImf)
+add_external_library(libboost_thread)
+add_external_library(libboost_regex)
+add_external_library(libboost_filesystem)
+add_external_library(libboost_iostreams)
+add_external_library(libboost_zlib)
+add_external_library(libboost_serialization)
+add_external_library(luxcorerender_opensubdiv)
+add_external_library(luxcorerender_bcd)
+add_external_library(luxcorerender_blosc)
+add_external_library(luxcorerender_embree3)
+add_external_library(luxcorerender_openvdb)
+add_external_library(luxcorerender_luxrays)
+add_external_library(luxcorerender_slgcore)
+add_external_library(luxcorerender_slgfilm)
+add_external_library(luxcorerender_slgkernels)
+add_external_library(luxcorerender_tbb)
 
 add_def(OIIO_STATIC_BUILD)
 add_def(GLEW_STATIC)
@@ -161,6 +195,7 @@ set_target_properties(${PROJ_NAME} PROPERTIES ${TARGET_PROPERTIES})
 target_link_libraries(${PROJ_NAME}
 	opengl32
 	glu32
+	bcrypt
 )
 
 add_dependencies(${PROJ_NAME} util_raytracing)
