Update CMake files; Fix linker errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,18 +78,18 @@ set(DEPENDENCY_LIBBOOST_REGEX_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libb
 set(DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION "" CACHE PATH "Path to LuxCoreRender lib directory.")
 set(DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION "" CACHE PATH "Path to LuxCoreRender lib directory.")
 set(DEPENDENCY_LUXCORERENDER_OPENSUBDIV_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/opensubdiv.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENIMAGEDENOISE_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageDenoise.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_TIFF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/libtiff.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENIMAGEDENOISE_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageDenoise.lib" CACHE PATH "Path to library." FORCE)
+set(DEPENDENCY_LUXCORERENDER_TIFF_LIBRARY "${DEPENDENCY_TIFF_LIBRARY}" CACHE PATH "Path to library." FORCE)
 set(DEPENDENCY_LUXCORERENDER_LPNG_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/libpng.lib" CACHE PATH "Path to library." FORCE)
 set(DEPENDENCY_LUXCORERENDER_ZLIB_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/zlib1.lib" CACHE PATH "Path to library." FORCE)
 set(DEPENDENCY_LUXCORERENDER_JPEG_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/jpeg.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENEXR_HALF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Half.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENEXR_IEX_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Iex.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMTHREAD_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmThread.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENEXR_IMATH_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Imath.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMIMF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmImf.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENEXR_HALF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Half.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENEXR_IEX_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Iex.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMTHREAD_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmThread.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENEXR_IMATH_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Imath.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMIMF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmImf.lib" CACHE PATH "Path to library." FORCE)
+# set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
 set(DEPENDENCY_LUXCORERENDER_BCD_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/bcd.lib" CACHE PATH "Path to library." FORCE)
 set(DEPENDENCY_LUXCORERENDER_BLOSC_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/blosc.lib" CACHE PATH "Path to library." FORCE)
 set(DEPENDENCY_LUXCORERENDER_EMBREE3_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/embree3.lib" CACHE PATH "Path to library." FORCE)
@@ -102,7 +102,9 @@ set(DEPENDENCY_LUXCORERENDER_TBB_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRAR
 
 add_include_dir(openimageio)
 add_external_library(luxcorerender_openimageio)
+add_external_library(luxcorerender_openimageio_util)
 link_external_library(luxcorerender_openimagedenoise)
+link_external_library(util_udm)
 add_include_dir(glm)
 add_include_dir(boost)
 add_external_library(glew)
@@ -120,6 +122,7 @@ add_external_library(luxcorerender_OpenEXR_Imath)
 add_external_library(luxcorerender_OpenEXR_IlmImf)
 add_external_library(opencolorio)
 add_external_library(luxcorerender_OpenImageIO)
+add_external_library(luxcorerender_OpenImageIO_util)
 #
 
 add_external_library(libboost_thread)
