--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ link_external_library(luxcorerender_openimagedenoise)
 link_external_library(util_udm)
 add_include_dir(glm)
 add_include_dir(boost)
+add_include_dir(openexr)
 add_external_library(glew)
 add_external_library(luxcorerender_tiff)
 add_external_library(luxcorerender_lpng)
