build(cmake): streamline cmake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,206 +1,88 @@
-cmake_minimum_required(VERSION 3.12)
-
-set(INCLUDE_DIRS)
-function(add_include_dir IDENTIFIER)
-	set(PRETTYNAME ${IDENTIFIER})
-	set(ARGV ${ARGN})
-	list(LENGTH ARGV ARGC)
-	if(${ARGC} GREATER 0)
-		list(GET ARGV 0 PRETTYNAME)
-	endif()
-	string(TOUPPER ${IDENTIFIER} UIDENTIFIER)
-
-	set(${DEFAULT_DIR} "")
-	set(DEPENDENCY_${UIDENTIFIER}_INCLUDE ${DEFAULT_DIR} CACHE PATH "Path to ${PRETTYNAME} include directory.")
-	set(INCLUDE_DIRS ${INCLUDE_DIRS} DEPENDENCY_${UIDENTIFIER}_INCLUDE PARENT_SCOPE)
-endfunction(add_include_dir)
-
-set(LIBRARIES)
-function(add_external_library IDENTIFIER)
-	set(PRETTYNAME ${IDENTIFIER})
-	set(ARGV ${ARGN})
-	list(LENGTH ARGV ARGC)
-	if(${ARGC} GREATER 0)
-		list(GET ARGV 0 PRETTYNAME)
-	endif()
-	string(TOUPPER ${IDENTIFIER} UIDENTIFIER)
-
-	set(DEPENDENCY_${UIDENTIFIER}_LIBRARY "" CACHE FILEPATH "Path to ${PRETTYNAME} library.")
-	set(LIBRARIES ${LIBRARIES} DEPENDENCY_${UIDENTIFIER}_LIBRARY PARENT_SCOPE)
-endfunction(add_external_library)
-
-function(link_external_library IDENTIFIER)
-	set(PRETTYNAME ${IDENTIFIER})
-	set(ARGV ${ARGN})
-	list(LENGTH ARGV ARGC)
-	if(${ARGC} GREATER 0)
-		list(GET ARGV 0 PRETTYNAME)
-	endif()
-	string(TOUPPER ${IDENTIFIER} UIDENTIFIER)
-
-	set(${DEFAULT_DIR} "")
-	set(DEPENDENCY_${UIDENTIFIER}_INCLUDE ${DEFAULT_DIR} CACHE PATH "Path to ${PRETTYNAME} include directory.")
-	set(INCLUDE_DIRS ${INCLUDE_DIRS} DEPENDENCY_${UIDENTIFIER}_INCLUDE PARENT_SCOPE)
-
-	set(DEPENDENCY_${UIDENTIFIER}_LIBRARY "" CACHE FILEPATH "Path to ${PRETTYNAME} library.")
-	set(LIBRARIES ${LIBRARIES} DEPENDENCY_${UIDENTIFIER}_LIBRARY PARENT_SCOPE)
-endfunction(link_external_library)
-
-set(DEFINITIONS)
-function(add_def DEF)
-	set(DEFINITIONS ${DEFINITIONS} ${DEF} PARENT_SCOPE)
-endfunction(add_def)
-
-##### CONFIGURATION #####
+include(${CMAKE_SOURCE_DIR}/cmake/pr_common.cmake)
 
 set(PROJ_NAME UniRender_LuxCoreRender)
+pr_add_library(${PROJ_NAME} SHARED)
 
-project(${PROJ_NAME} CXX)
+pr_add_dependency(${PROJ_NAME} ishared TARGET PUBLIC)
+pr_add_dependency(${PROJ_NAME} util_raytracing TARGET PUBLIC)
 
-set(CMAKE_CXX_STANDARD 20)
-set(ENABLE_STATIC_LIBRARY_FLAG 0)
+pr_set_raw_library_path(libboost_filesystem "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_filesystem-vc142-mt-x64-1_76.lib" FORCE)
+pr_set_raw_library_path(libboost_iostreams "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_iostreams-vc142-mt-x64-1_76.lib" FORCE)
+pr_set_raw_library_path(libboost_serialization "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_serialization-vc142-mt-x64-1_76.lib" FORCE)
+pr_set_raw_library_path(libboost_zlib "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_zlib-vc142-mt-x64-1_76.lib" FORCE)
+pr_set_raw_library_path(libboost_thread "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_thread-vc142-mt-x64-1_76.lib" FORCE)
+pr_set_raw_library_path(libboost_regex "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_regex-vc142-mt-x64-1_76.lib" FORCE)
 
-link_external_library(util_image)
-link_external_library(util_raytracing)
-link_external_library(sharedutils)
-link_external_library(mathutil)
-link_external_library(vfilesystem)
-link_external_library(luxcorerender)
-add_include_dir(luxcorerender_generated)
+pr_set_raw_library_path(luxcorerender_opensubdiv "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/opensubdiv.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_tiff "${DEPENDENCY_TIFF_LIBRARY}" FORCE)
+pr_set_raw_library_path(luxcorerender_lpng "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/libpng.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_zlib "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/zlib1.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_jpeg "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/jpeg.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_bcd "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/bcd.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_blosc "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/blosc.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_embree3 "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/embree3.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_openvdb "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/openvdb.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_luxrays "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/luxrays.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_slgcore "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-core.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_slgfilm "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-film.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_slgkernels "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-kernels.lib" FORCE)
+pr_set_raw_library_path(luxcorerender_tbb "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/tbb.lib" FORCE)
 
-set(DEPENDENCY_LIBBOOST_FILESYSTEM_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_filesystem-vc142-mt-x64-1_76.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LIBBOOST_IOSTREAMS_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_iostreams-vc142-mt-x64-1_76.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LIBBOOST_SERIALIZATION_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_serialization-vc142-mt-x64-1_76.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LIBBOOST_ZLIB_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_zlib-vc142-mt-x64-1_76.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LIBBOOST_THREAD_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_thread-vc142-mt-x64-1_76.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LIBBOOST_REGEX_LIBRARY "${DEPENDENCY_BOOST_LIBRARY_LOCATION}/libboost_regex-vc142-mt-x64-1_76.lib" CACHE PATH "Path to library." FORCE)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} openimageio HEADER_ONLY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_openimageio LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_openimageio_util LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_openimagedenoise LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} openexr HEADER_ONLY PUBLIC)
 
-set(DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION "" CACHE PATH "Path to LuxCoreRender lib directory.")
-set(DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION "" CACHE PATH "Path to LuxCoreRender lib directory.")
-set(DEPENDENCY_LUXCORERENDER_OPENSUBDIV_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/opensubdiv.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENIMAGEDENOISE_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageDenoise.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_TIFF_LIBRARY "${DEPENDENCY_TIFF_LIBRARY}" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_LPNG_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/libpng.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_ZLIB_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/zlib1.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_JPEG_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/jpeg.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENEXR_HALF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Half.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENEXR_IEX_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Iex.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMTHREAD_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmThread.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENEXR_IMATH_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/Imath.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENEXR_ILMIMF_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/IlmImf.lib" CACHE PATH "Path to library." FORCE)
-# set(DEPENDENCY_LUXCORERENDER_OPENIMAGEIO_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/OpenImageIO.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_BCD_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/bcd.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_BLOSC_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/blosc.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_EMBREE3_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/embree3.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_OPENVDB_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/openvdb.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_LUXRAYS_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/luxrays.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_SLGCORE_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-core.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_SLGFILM_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-film.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_SLGKERNELS_LIBRARY "${DEPENDENCY_LUXCORERENDER_LIBRARY_LOCATION}/slg-kernels.lib" CACHE PATH "Path to library." FORCE)
-set(DEPENDENCY_LUXCORERENDER_TBB_LIBRARY "${DEPENDENCY_LUXCORERENDER_DEPS_LIBRARY_LOCATION}/tbb.lib" CACHE PATH "Path to library." FORCE)
-
-add_include_dir(openimageio)
-add_external_library(luxcorerender_openimageio)
-add_external_library(luxcorerender_openimageio_util)
-link_external_library(luxcorerender_openimagedenoise)
-link_external_library(util_udm)
-add_include_dir(glm)
-add_include_dir(boost)
-add_include_dir(openexr)
-add_external_library(glew)
-add_external_library(luxcorerender_tiff)
-add_external_library(luxcorerender_lpng)
-add_external_library(luxcorerender_zlib)
-add_external_library(luxcorerender_jpeg)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_tiff LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_lpng LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_zlib LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_jpeg LIBRARY PUBLIC)
 
 # Required for color management
-link_external_library(util_ocio)
-add_external_library(luxcorerender_OpenEXR_Half)
-add_external_library(luxcorerender_OpenEXR_Iex)
-add_external_library(luxcorerender_OpenEXR_IlmThread)
-add_external_library(luxcorerender_OpenEXR_Imath)
-add_external_library(luxcorerender_OpenEXR_IlmImf)
-add_external_library(luxcorerender_opencolorio)
-add_external_library(luxcorerender_OpenImageIO)
-#
+pr_add_external_dependency(${PROJ_NAME} util_ocio LIBRARY PUBLIC)
 
-add_external_library(luxcorerender_libboost_thread)
-add_external_library(luxcorerender_libboost_regex)
-add_external_library(luxcorerender_libboost_filesystem)
-add_external_library(luxcorerender_libboost_iostreams)
-add_external_library(luxcorerender_libboost_zlib)
-add_external_library(luxcorerender_libboost_serialization)
-add_external_library(luxcorerender_libboost_wserialization)
-add_external_library(luxcorerender_opensubdiv)
-add_external_library(luxcorerender_bcd)
-add_external_library(luxcorerender_blosc)
-add_external_library(luxcorerender_embree3)
-add_external_library(luxcorerender_openvdb)
-add_external_library(luxcorerender_luxrays)
-add_external_library(luxcorerender_slgcore)
-add_external_library(luxcorerender_slgfilm)
-add_external_library(luxcorerender_slgkernels)
-add_external_library(luxcorerender_tbb)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_OpenEXR_Half LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_OpenEXR_Iex LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_OpenEXR_IlmThread LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_OpenEXR_Imath LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_OpenEXR_IlmImf LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_opencolorio LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_OpenImageIO LIBRARY PUBLIC)
 
-add_def(OIIO_STATIC_BUILD)
-add_def(GLEW_STATIC)
-add_def(RTUTIL_DLL)
-add_def(UIMG_ENABLE_NVTT)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_thread LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_regex LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_filesystem LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_iostreams LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_zlib LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_serialization LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_libboost_wserialization LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_opensubdiv LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_bcd LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_blosc LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_embree3 LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_openvdb LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_luxrays LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_slgcore LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_slgfilm LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_slgkernels LIBRARY PUBLIC)
+pr_add_external_dependency(${PROJ_NAME} luxcorerender_tbb LIBRARY PUBLIC)
 
-##### CONFIGURATION #####
-
-set(LIB_TYPE SHARED)
-
-foreach(def IN LISTS DEFINITIONS)
-	add_definitions(-D${def})
-endforeach(def)
-
-function(def_vs_filters FILE_LIST)
-	foreach(source IN LISTS FILE_LIST)
-	    get_filename_component(source_path "${source}" PATH)
-	    string(REPLACE "${CMAKE_CURRENT_LIST_DIR}" "" source_path_relative "${source_path}")
-	    string(REPLACE "/" "\\" source_path_msvc "${source_path_relative}")
-	    source_group("${source_path_msvc}" FILES "${source}")
-	endforeach()
-endfunction(def_vs_filters)
-
-file(GLOB_RECURSE SRC_FILES
-    "${CMAKE_CURRENT_LIST_DIR}/src/*.h"
-    "${CMAKE_CURRENT_LIST_DIR}/src/*.hpp"
-    "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/include/*.h"
-    "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp"
-)
-add_library(${PROJ_NAME} ${LIB_TYPE} ${SRC_FILES})
-if(WIN32)
-	target_compile_options(${PROJ_NAME} PRIVATE /wd4251)
-	target_compile_options(${PROJ_NAME} PRIVATE /wd4996)
-endif()
-def_vs_filters("${SRC_FILES}")
-
-foreach(LIB IN LISTS LIBRARIES)
-	target_link_libraries(${PROJ_NAME} ${${LIB}})
-endforeach(LIB)
-
-target_include_directories(${PROJ_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
-target_include_directories(${PROJ_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src)
-
-foreach(INCLUDE_PATH IN LISTS INCLUDE_DIRS)
-	target_include_directories(${PROJ_NAME} PRIVATE ${${INCLUDE_PATH}})
-endforeach(INCLUDE_PATH)
-
-set(TARGET_PROPERTIES LINKER_LANGUAGE CXX)
-if(DEFINED PRECOMPILED_HEADER)
-	include(PrecompiledHeader.cmake)
-	add_precompiled_header(${PROJ_NAME} "src/${PRECOMPILED_HEADER}.h" c++17 FORCEINCLUDE)
-endif()
-set_target_properties(${PROJ_NAME} PROPERTIES ${TARGET_PROPERTIES})
-
-target_link_libraries(${PROJ_NAME}
+target_link_libraries(${PROJ_NAME} PRIVATE
 	opengl32
 	glu32
 	bcrypt
 )
 
-add_dependencies(${PROJ_NAME} util_raytracing)
+pr_add_compile_definitions(
+	${PROJ_NAME} PUBLIC
+		-DOIIO_STATIC_BUILD
+		-DGLEW_STATIC
+		-DRTUTIL_DLL
+)
+
+pr_add_headers(${PROJ_NAME} "include/")
+pr_add_sources(${PROJ_NAME} "src/")
+
+pr_finalize(${PROJ_NAME})
